2007-01-03  Hubert Figuiere  <hub@figuiere.net>

	* libgphoto2_port/disk/disk.c (gp_port_library_list): handle
	automounter properly when there is no HAL.

	* camlibs/directory/directory.c (file_list_func): ignore entries
	that start with '.'
	(folder_list_func): ignore entries that start with '.'
	Some code style cleaning.

2006-11-25  Hubert Figuiere  <hub@figuiere.net>

	* libgphoto2_port/configure.ac: bump soname for libgphoto2_port
	post 2.3.0 branch

	* configure.ac: 2.3.0.1.trunk because we branched 2.3.0

2006-10-14  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/panasonic/l859/l859.c,
	camlibs/enigma13/enigma13.c (enigma13_get_toc),
	camlibs/panasonic/l859/README.panasonic-l859,
	camlibs/panasonic/dc.h: Fixed typo
	https://launchpad.net/distros/ubuntu/+source/libgphoto2/+bug/61163


2006-10-07  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/canon/canon.c, camlibs/konica/qm150.c,
	camlibs/ptp2/ptp.c, camlibs/sierra/library.c, 
	camlibs/sierra/sierra-desc.c, doc/camlib_devel.lyx,
	libgphoto2/gphoto2-abilities-list.c: s/occured/occurred/
	From Launchpad bug 61163:
	https://launchpad.net/distros/ubuntu/+source/libgphoto2/+bug/61163

2006-09-19  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/ptp2/config.c: More typo.

	* camlibs/gsmart300/library.c (delete_file_func): Fixed typo

	* camlibs/ptp2/ptp.h (PTP_DPC_NIKON_WhiteBalanceFluorescentBias): 
	Change typo in the const name

	* camlibs/stv0680/bayer.c (light_enhance),
	camlibs/minolta/dimagev/dimagev.c,
	camlibs/konica/qm150.c (camera_manual),
	camlibs/spca50x/library.c (delete_file_func),
	camlibs/canon/usb.c (canon_usb_camera_init),
	camlibs/sierra/olympus-desc.c,
	camlibs/ptp2/ptp.c (ptp_get_property_description),
	libgphoto2/gphoto2-camera.c (gp_camera_init),
	camlibs/ptp2/library.c (camera_canon_capture): Fix typos
	https://launchpad.net/products/libgphoto/+bug/61163

2006-06-07  Hubert Figuiere  <hub@figuiere.net>

	* AUTHORS: added credits for 5D capture support.
